fixed code and list layout issues

--- a/styles/rehypePrettyCode.css
+++ b/styles/rehypePrettyCode.css
@@ -1,60 +1,83 @@
 pre {
   overflow-x: auto;
-  padding: 1rem;
-  border-radius: 0.375rem;
+  padding: 1rem 0;
 }
 
-code {
+pre [data-line] {
+  padding: 0 1rem;
+}
+
+figure[data-rehype-pretty-code-figure] {
+  overflow: hidden;
+  /* stylist preferences */
+  background-color: #232323;
+  border-radius: 0.5rem;
+  grid-column: 1 / -1;
+  padding: 0.5rem 0;
+}
+
+figure[data-rehype-pretty-code-figure] code {
+  display: grid;
+}
+
+figure[data-rehype-pretty-code-figure] pre {
+  /* stylist preferences */
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+
+figure[data-rehype-pretty-code-title] {
+  /* stylistic preferences */
+  margin-bottom: 0.125rem;
+  border-radius: 0.375rem;
+  background-color: rgb(255 228 230 / 0.1);
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    'Liberation Mono', 'Courier New', monospace;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: rgb(255 228 230 / 0.7);
+}
+span[data-line] {
+  /* stylistic preferences */
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+span[data-line][data-highlighted-line] {
+  box-shadow: inset 5px 0 0 0 rgb(60, 63, 255);
+  background-color: rgba(52, 106, 255, 0.38);
+}
+
+code[data-line-numbers] {
   counter-reset: line;
 }
 
-code > [data-line]::before {
+code[data-line-numbers] > [data-line]::before {
   counter-increment: line;
   content: counter(line);
+
+  /* Other styling */
   display: inline-block;
-  width: 1rem;
-  margin-right: 1rem;
+  width: 0.75rem;
+  margin-right: 2rem;
   text-align: right;
   color: gray;
 }
 
 code[data-line-numbers-max-digits='2'] > [data-line]::before {
-  width: 2rem;
+  width: 1.25rem;
 }
 
 code[data-line-numbers-max-digits='3'] > [data-line]::before {
-  width: 3rem;
+  width: 1.75rem;
 }
 
-[data-rehype-pretty-code-fragment] {
-  position: relative;
-}
-
-[data-rehype-pretty-code-title] {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0.5rem 1rem;
-  font-size: 0.8rem;
-  font-weight: 500;
-  background-color: #2d2d2d;
-  color: #e6e6e6;
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
-}
-
-[data-rehype-pretty-code-title] + pre {
-  padding-top: 2.5rem;
-}
-
-.highlighted {
-  background-color: rgba(200, 200, 255, 0.1);
-  border-left: 2px solid #60a5fa;
-  padding-left: 0.5rem;
-}
-
-.word {
-  background-color: rgba(200, 200, 255, 0.15);
-  padding: 0.25rem;
-  border-radius: 0.25rem;
+code[data-line-numbers-max-digits='4'] > [data-line]::before {
+  width: 2.25rem;
 }
